# theblogs-app

./: .dockerignore  .gitignore  DEPLOY_SETUP.md  Dockerfile  PRODUCTION_SETUP.md  README.md  RESET_INSTRUCTIONS.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  reset_and_setup.bat  reset_and_setup.py  screenshot.py  setup_permissions.sh
app/: check_db.py  entrypoint.sh  requirements.txt
app/account/: admin.py  models.py  urls.py  views.py
app/account/management/commands/: generate_users.py
app/account/migrations/: 0001_initial.py
app/app/: settings.py  urls.py  views.py
app/blog/: admin.py  models.py  urls.py  views.py
app/blog/management/commands/: README_text_generation.md  generate_posts.py
app/blog/migrations/: 0001_initial.py  0002_remove_post_likes.py  0003_post_reading_time.py  0004_alter_post_created_at.py
app/blog/templatetags/: blog_extras.py  markdown_extras.py
app/config/: config.json
app/static/css/: authors_list.css  buttons.css  create_post.css  edit_profile.css  forms.css  post_detail.css  post_meta.css  profile.css  style.css
app/static/js/: main.js
app/templates/: 404.html  base.html
app/templates/account/: delete_post.html  edit_post.html  edit_profile.html  login.html  profile.html  register.html
app/templates/blog/: authors_list.html  contact.html  create_post.html  index.html  post_detail.html  privacy_policy.html  profile.html  search.html  terms_of_service.html
init-db/: 01-create-databases.sql  02-create-schemas.sql  03-create-extensions.sql
nginx/: nginx.conf
